--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
 server.error.include-stacktrace=never
+
+api.security.token.secret=${JWT_SECRET:12345678}
